# python-utils

./: README.md  pyproject.toml
python_utils/: __init__.py
python_utils/logging/: __init__.py  main.py
python_utils/logging/correlation/: __init__.py  correlation.py  http_client.py  middleware.py
python_utils/logging/formatter/: formatter.py
