[tool.poetry]
name = "python-utils"
version = "0.1.0"
description = "Python package for storing modules containing common functions and application logic reussed across CORSphere's Python services. Each module is put in a separate folder in the `python_utils` directory."
authors = ["Emmanuel Otobo <emmanuel@corsphere.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.7,<0.116.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
